--- a/HeartOfGold/Views/Account/Register.cshtml
+++ b/HeartOfGold/Views/Account/Register.cshtml
@@ -9,7 +9,7 @@
 </div>
 
 <div class="container center">
-    <p id="registerP">* indicates required fields.</p>
+    <p>Please use your NMU online username to register. For example: s212345689</p>
 </div>
 
 <div class="container">
