--- a/HeartOfGold/Views/Help/Index.cshtml
+++ b/HeartOfGold/Views/Help/Index.cshtml
@@ -17,7 +17,7 @@
         <ul class="text-justify">
             <li><p class="lead" style="margin-bottom: 2px;"><strong>Register</strong> an account! Log yourself in.</p></li>
             <li><p class="lead" style="margin-bottom: 2px;">To submit a request, browse to the <strong>Home Page</strong> and select <strong>Submit a Request</strong>.</p></li>
-            <li><p class="lead">To track your current requests, click on <strong>My Profile</strong> at the top.</p></li>
+            <li><p class="lead">To track your current requests, click on <strong>My Requests</strong> at the top.</p></li>
         </ul>
     </div>
     <hr />
@@ -32,7 +32,7 @@
         <h3>How many requests am I allowed to submit?</h3>
         <div>
             <p class="lead p-text">
-                One request per day. However, exceptions can be made under special circumstances. 
+                You're allowed a total of 3 requests at any given time.
             </p>
         </div>
         <h3>Who can donate to the students?</h3>
@@ -44,13 +44,13 @@
         <h3>How do I know what is happening with my submitted request?</h3>
         <div>
             <p class="lead p-text">
-                At the top of the web page, click on <strong>My Profile</strong>. The status and progress of your request will be shown here.
+                At the top of the web page, click on <strong>My Requests</strong>. The status and progress of your request will be shown here.
             </p>
         </div>
         <h3>I am still confused about a few things. Who can I contact?</h3>
         <div>
             <p class="lead p-text">
-                You are welcome to contact the website administrator at heartadmin@mandela.ac.za.
+                You are welcome to contact the website administrator at heart.of.gold.mandela@gmail.com.
             </p>
         </div>
 
