--- a/HeartOfGold/Views/Item/Index.cshtml
+++ b/HeartOfGold/Views/Item/Index.cshtml
@@ -92,8 +92,8 @@
                 pageLength: 25
             });
 
-            $('#From').datetimepicker({
-                format: 'DD/MM/YYYY HH:mm A'
+            $('#From,#To').datetimepicker({
+                format: 'DD/MM/YYYY A',
             })
         });
     </script>
