--- a/HeartOfGold/Views/Request/RequestForm.cshtml
+++ b/HeartOfGold/Views/Request/RequestForm.cshtml
@@ -15,9 +15,8 @@
         <div class="well">
             <h4 class="note-heading"><span>What do I need to know?</span></h4>
             <ol style="margin-top:2em">
-                <li style="padding-left:1em">You are allowed to submit one request per day.</li>
-                <li style="padding-left:1em">You have a total of three requests active at once.</li>
-                <li style="padding-left:1em">Indicate clearly what you are looking for. Here is an example of a well-worded request: "I am looking for first year IT textbooks." </li>
+                <li style="padding-left:1em">You may have a total of <strong>three</strong> requests active at once. This is to prevent too many requests from being logged.</li>
+                <li style="padding-left:1em">Indicate clearly what you are looking for. Here is an example of a well-worded request: "I am looking for warm clothes during the winter months." </li>
                 <li style="padding-left:1em">Remember to bring your student card when collecting a donation.</li>
             </ol>
         </div>
