--- a/HeartOfGold/Views/Donors/Index.cshtml
+++ b/HeartOfGold/Views/Donors/Index.cshtml
@@ -44,14 +44,14 @@
 
 <br />
 <div class="center">
-    <p class="lead" style="font-size:24px">Who's donated to us?</p>
+    <h4>Who's donated to us?</h4>
     <hr />
 </div>
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <div class="alert alert-success center" role="alert">Note: Click on the name of a donor to view their donation history.</div>
+            <div class="alert alert-success center" role="alert" style="background-color:#678da0">Note: Click on the name of a donor to view their donation history.</div>
         </div>
     </div>
 </div>
