--- a/HeartOfGold/Views/Profile/Index.cshtml
+++ b/HeartOfGold/Views/Profile/Index.cshtml
@@ -6,6 +6,30 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div id="StatusModal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <div class="center">
+                    <h4>Explain these statuses to me!</h4>
+                </div>
+                <hr style="margin:5px;" />
+            </div>
+            <div class="modal-body" id="statusbody">
+                <div>
+                    <ul class="text-justify">
+                        <li><p class="lead statusP" style="margin-bottom: 5px;"><strong>Open</strong> - The request has recently been created, and is awaiting a response.</p></li>
+                        <li><p class="lead statusP" style="margin-bottom: 5px;"><strong>Successful</strong> - The admin has indicated that your request is successful, but has not yet created a collection event.</p></li>
+                        <li><p class="lead statusP" style="margin-bottom: 5px;"><strong>Unsuccessful</strong>  - Your request did not make it. Please try again or contact the Heart of Gold admin.</p></li>
+                        <li><p class="lead statusP"><strong>Awaiting Collection</strong>  - A time and date has been set for you to collect your donation.</p></li>
+                    </ul>
+        </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <br />
 <div class="container">
     <div class="row center">
@@ -27,10 +51,15 @@
 
 @if (TempData["NoResults"] != null)
 {
-    <p class="lead">You currently have no active requests.</p>
+<div class="container center">
+    <p class="lead">You currently have no active requests. Submit one by visiting the home page and clicking on <strong>Submit a Request</strong>!</p>
+</div>
 }
 else
-{
+{   
+    <div class="container center" style="padding-bottom:15px">
+        <button id="StatusHelp" class="btn btn-primary register-button">I need help understanding the different statuses.</button>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1 col-sm-6 col-sm-offset-3">
@@ -59,6 +88,20 @@ else
                                                 <label>Status:</label>
                                                 <label class="status">@r.RequestStatus.Name</label>
                                             </div>
+                                            @if (r.CollectionDate != null)
+                                            {
+                                                <div class="col-md-6 col-md-offset-3">
+                                                    <label>Collection Date:</label>
+                                                    <label>@r.CollectionDate.Value.ToString("dd MMM yyyy H:mm tt")</label>
+                                                </div>
+                                            }
+                                            else
+                                            {
+                                                <div class="col-md-6 col-md-offset-3">
+                                                    <label>The admin has not yet added a collection date.</label>
+                                                </div>
+                                            }
+
                                         </div>
                                     </li>
                                 }
@@ -69,7 +112,7 @@ else
             </div>
         </div>
     </div>
-    <hr style="margin:0;"/>
+    <hr style="margin:0;" />
 }
 
 @section scripts
@@ -84,16 +127,23 @@ else
                 current.style.color = 'black';
             } else if (current.textContent === 'Successful') {
                 current.style.color = 'green';
-            } else {
+            } else if (current.textContent === 'Unsuccessful') {
                 current.style.color = 'orange';
             }
             current.style.fontWeight = 700;
-        });   
-        
-    </script>
-    }
+        });
 
-    @*<script>
+    </script>
+    <script>
+        $(document).ready(function () {
+            $('#StatusHelp').click(function () {
+                $('#StatusModal').modal();
+            });
+        })
+    </script>
+}
+
+@*<script>
         $(document).ready(function () {
 
         }        var check = function () {
@@ -103,6 +153,6 @@ else
                 }
             };
             check();
-        })        
+        })
     </script>*@
 
