--- a/HeartOfGold/Views/Request/ViewRequests.cshtml
+++ b/HeartOfGold/Views/Request/ViewRequests.cshtml
@@ -10,7 +10,7 @@
 <link href="/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 <div class="center">
-<h3>Student Requests</h3>
+    <h3>Student Requests</h3>
     <hr />
 </div>
 
@@ -31,22 +31,19 @@
                         }
                     </div>
                 }
-
             </div>
         </div>
     </div>
 
     @if (ViewBag.Results != null)
     {
-    <div class="col-md-6 col-md-offset-1">
-        <p>No requests for this student number found!</p>
-    </div>
-
+        <div class="col-md-6 col-md-offset-1">
+            <p>No requests for this student number found!</p>
+        </div>
     }
 
-   @foreach (var request in Model)
+    @foreach (var request in Model)
     {
-
         <div class="col-md-6 col-sm-10">
             <div class="panel panel-default">
                 <div class="panel-heading">Student Number: @request.StudentNumber</div>
@@ -73,6 +70,7 @@
                         @Html.HiddenFor(r => request.StudentNumber)
 
                         <div class="form-group center">
+                            @Html.ValidationMessageFor(m => request.SelectedStatusId, null, new { @class = "block"})
                             <label class="radio-inline">
                                 @Html.RadioButtonFor(m => request.SelectedStatusId, "2")Successful
                             </label>
@@ -84,16 +82,15 @@
                             @Html.ActionLink("Allocate donation item...", "Index", "Item")
                         </div>
 
-                            <div class="form-group center">
-                                <button type="submit" class="btn btn bg-primary register-button">Process...</button>
-                            </div>
-                            }
+                        <div class="form-group center">
+                            <button type="submit" class="btn btn bg-primary register-button">Process...</button>
                         </div>
-                    </div>
+                    }
+                </div>
+            </div>
         </div>
     }
 </div>
-
 
 <div class="row center">
     <div class="col-md-6 col-md-offset-3">
@@ -104,17 +101,12 @@
 
 <hr />
 
-@* -- Column 6/12 -- *@
-@*<div class="col-md-6">
-        <div class="panel panel-default">
-            <div class="panel-heading">Things to remember:</div>
-            <div class="panel-body">
-                <ol>
-                    <li>You are allowed to submit one request per day.</li>
-                    <li>Indicate clearly what you are looking for.</li>
-                    <li>Remember to bring your student card when collecting a donation.</li>
-                </ol>
-            </div>
-        </div>
-    </div>*@
-    
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+
+    <script>
+
+
+    </script>
+}
