saturday 28 oct commit

--- a/HeartOfGold/Views/Home/Dashboard.cshtml
+++ b/HeartOfGold/Views/Home/Dashboard.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!-- Modal -->
+@*<!-- Modal -->
 <div class="modal fade" tabindex="-1" role="dialog" id="emailModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content" id="modalContent">
@@ -48,7 +48,7 @@
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+</div><!-- /.modal -->*@
 
 <div class="container">
     <div class="row">
@@ -101,12 +101,9 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-4">
-                            <div class="panel panel-default" id="dashboardStudent">
-                                <i class="fas fa-envelope fa-8x" id="mailIcon"></i>
+                            <div class="panel panel-default" id="dashboardStudent">                             
                                 <div class="center">
-                                    <a href="" data-toggle="modal" data-target="#emailModal">
-                                        Quick Send Email
-                                    </a>
+                                    <p class="lead">We currently</p>
                                 </div>
                           </div>
                     </div>
