--- a/HeartOfGold/Views/Request/ViewRequests.cshtml
+++ b/HeartOfGold/Views/Request/ViewRequests.cshtml
@@ -32,6 +32,14 @@
                     </div>
                 }
             </div>
+            <select id="filterRequests" name="StatusFilter" role="menu">
+                <option value="1">Open</option>
+                <option value="2">Successful</option>
+                <option value="3">Unsuccesful</option>
+                <option value="4">Collected</option>
+                <option value="5">Cancelled</option>
+                <option value="6">Awaiting Request</option>
+            </select>
         </div>
     </div>
 
@@ -78,10 +86,19 @@
                                 @Html.RadioButtonFor(m => request.SelectedStatusId, "3")Unsuccessful
                             </label>
                         </div>
-                        <div class="form-group center">
-                            @Html.ActionLink("Allocate donation item...", "Index", "Item")
-                        </div>
-
+                        if (Session["Donation"] != null)
+                        {                  
+                            <div class="form-group center">
+                                <label>You have added: <strong>@Session["Donation"].ToString() x1</strong></label>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="form-group center">
+                                @Html.ActionLink("Allocate donation item...", "Index", "Item", new { SelectDonation = "Yes" }, null)
+                            </div>
+                        }
+                        
                         <div class="form-group center">
                             <button type="submit" class="btn btn bg-primary register-button">Process...</button>
                         </div>
@@ -105,8 +122,16 @@
 {
     @Scripts.Render("~/bundles/jqueryval")
 
-    <script>
-
+    <script type="text/javascript">
+            $('#filterRequests').change(function () {
+                var data = null;
+                var data = $(this).find(":selected").val();
+                $.ajax({
+                    url: "/Request/GetRequests/" + data,
+                    data: { StatusFilter : data },
+                    type: 'POST'
+                });
+            });
 
     </script>
 }
